<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="settings_app_name">Settings</string>
    <string name="launcher_settings_app_name">Settings</string>
    <string name="launcher_network_app_name">Network</string>
    <string name="launcher_restricted_profile_app_name">Restricted Profile</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_preferences">Preferences</string>
    <string name="header_category_accessories">Remote &amp; accessories</string>
    <string name="header_category_personal">Personal</string>
    <string name="add_account">Add account</string>
    <string name="account_header_sync">Sync</string>
    <string name="account_header_remove_account">Remove account</string>
    <string name="search_title">Search</string>
    <string name="account_sync">Choose synced apps</string>
    <string name="sync_now">Sync now</string>
    <string name="sync_cancel">Cancel sync</string>
    <string name="sync_in_progress">Syncing\u2026</string>
    <string name="last_synced">Last synced <xliff:g id="time">%1s</xliff:g></string>
    <string name="sync_disabled">Disabled</string>
    <string name="sync_is_failing">Sync isn\'t working right now. It will be back shortly.</string>
    <string name="account_remove">Remove account</string>
    <string name="account_remove_failed">Can\'t remove account</string>
    <string-array name="account_detail_settings">
        <item>Name</item>
        <item>Photo</item>
        <item>Security</item>
        <item>Google Wallet</item>
        <item>Purchase History</item>
        <item>Remove Account</item>
    </string-array>
    <string name="connectivity_network">Network</string>
    <string name="connectivity_wifi">Wi-Fi</string>
    <string name="connectivity_ethernet">Ethernet</string>
    <string name="device_daydream">Daydream</string>
    <string name="device_display">Display</string>
    <string name="device_sound_effects">System sounds</string>
    <string name="device_apps">Apps</string>
    <string name="device_storage_reset">Storage &amp; reset</string>
    <string name="device_storage">Storage</string>
    <string name="device_backup_restore">Backup &amp; restore</string>
    <string name="device_reset">Factory data reset</string>
    <string name="device_calibration">Calibration</string>
    <string name="apps_downloaded">Downloaded apps</string>
    <string name="apps_system">System apps</string>
    <string name="apps_running">Running apps</string>
    <string name="accessories_remote">Remote</string>
    <string name="accessories_camera">Camera</string>
    <string name="accessories_add">Add accessory</string>
    <string name="accessories_wifi_display">Wi-Fi Display</string>
    <string name="accessory_state_pairing">Pairing&#8230;</string>
    <string name="accessory_state_connecting">Connecting&#8230;</string>
    <string name="accessory_state_error">Couldn\'t pair</string>
    <string name="accessory_state_canceled">Canceled</string>
    <string name="accessory_state_paired">Paired</string>
    <string name="accessory_options">Accessory</string>
    <string name="accessory_rename">Rename</string>
    <string name="accessory_unpair">Unpair</string>
    <string name="accessory_unpairing">Unpairing device&#8230;</string>
    <string name="accessory_connected">Connected</string>
    <string name="accessories_add_title">Searching for accessories&#8230;</string>
    <string name="accessories_add_bluetooth_inst">Before pairing your Bluetooth devices, make sure they\'re in pairing mode</string>
    <string name="accessories_autopair_msg">A device was found and will automatically pair in <xliff:g id="countdown">%1$s</xliff:g> seconds</string>
    <string name="accessories_add_title_multiple">Multiple devices found</string>
    <string name="accessories_add_multiple">To choose a different device, press the pairing button on this device</string>
    <string name="accessories_add_multiple_select">To pair with the selected device, press &amp; hold this device’s pairing button for 5 seconds</string>
    <string name="error_action_not_supported">This action isn\'t supported</string>
    <string name="bluetooth_pairing_request">Bluetooth pairing request</string>
    <string name="bluetooth_confirm_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, make sure it\'s showing this passkey: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b></string>
    <string name="bluetooth_incoming_pairing_msg">From: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Pair with this device?</string>
    <string name="bluetooth_display_passkey_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>&lt;br>Type on it: &lt;b><xliff:g id="passkey">%2$s</xliff:g>&lt;/b>, then press Return or Enter.</string>
    <string name="bluetooth_enter_pin_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required PIN:</string>
    <string name="bluetooth_enter_passkey_msg">To pair with: &lt;b><xliff:g id="device_name">%1$s</xliff:g>&lt;/b>, &lt;br>Type the device\'s required passkey:</string>
    <string name="bluetooth_pin_values_hint">Usually 0000 or 1234</string>
    <string name="bluetooth_pair">Pair</string>
    <string name="bluetooth_cancel">Cancel</string>
    <string name="system_cast">Google Cast</string>
    <string name="system_date_time">Date &amp; time</string>
    <string name="system_language">Language</string>
    <string name="system_keyboard">Keyboard</string>
    <string name="system_search">Search</string>
    <string name="system_security">Security &amp; Restrictions</string>
    <string name="system_speech">Speech</string>
    <string name="system_inputs">Inputs</string>
    <string name="system_accessibility">Accessibility</string>
    <string name="system_developer_options">Developer options</string>
    <string name="accessibility_none">None</string>
    <string name="about_system_update">System update</string>
    <string name="about_preference">About</string>
    <string name="device_name">Device name</string>
    <string name="hardware_info">"Hardware Ifno"</string>
    <string name="about_legal_info">Legal information</string>
    <string name="about_warranty">Warranty</string>
    <string name="about_legal_license">Open source licenses</string>
    <string name="about_terms_of_service">View Terms of Service</string>
    <string name="about_privacy_policy">View Privacy Policy</string>
    <string name="about_additional_terms">View Additional Terms</string>
    <string name="about_license_activity_unavailable">License data is unavailable</string>
    <string name="about_model">Model</string>
    <string name="about_version">Version</string>
    <string name="about_serial">Serial number</string>
    <string name="about_build">Build</string>
    <plurals name="show_dev_countdown">
        <item quantity="one">You are now <xliff:g id="step_count">%1$d</xliff:g> step away from being a developer</item>
        <item quantity="other">You are now <xliff:g id="step_count">%1$d</xliff:g> steps away from being a developer</item>
    </plurals>
    <string name="about_ads">Ads</string>
    <string name="show_dev_on">You are now a developer!</string>
    <string name="show_dev_already">No need, you are already a developer</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_security_none">None</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_remembered">Saved</string>
    <string name="wifi_disabled_generic">Disabled</string>
    <string name="wifi_disabled_network_failure">Avoided poor Internet connection</string>
    <string name="wifi_disabled_password_failure">Authentication problem</string>
    <string name="wifi_not_in_range">Not in range</string>
    <string name="wifi_wps_available_first_item">WPS available</string>
    <string name="wifi_wps_available_second_item">\u0020(WPS available)</string>
    <string name="wifi_secured_first_item">Secured with <xliff:g id="wifi_security_short">%1$s</xliff:g></string>
    <string name="wifi_secured_second_item">, secured with <xliff:g id="wifi_security_short">%1$s</xliff:g></string>
    <string-array name="wifi_signal_strength">
        <item>Poor</item>
        <item>Fair</item>
        <item>Good</item>
        <item>Excellent</item>
    </string-array>
    <string name="title_mac_address">MAC address</string>
    <string name="title_signal_strength">Signal strength</string>
    <string name="title_ip_address">IP address</string>
    <string name="title_ssid">Enter name of Wi-Fi network</string>
    <string name="title_internet_connection">Internet connection</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not connected</string>
    <string name="wifi_setting_header_available_networks">Wi-Fi</string>
    <string name="wifi_setting_header_other_options">OTHER OPTIONS</string>
    <string name="wifi_setting_see_all">See all</string>
    <string name="wifi_setting_available_networks">AVAILABLE NETWORKS</string>
    <string name="wifi_setting_other_options_wps">Connect via WPS</string>
    <string name="wifi_setting_other_options_add_network">Add new network</string>
    <string name="add_network">Add network</string>
    <string name="network_ssid">Network SSID</string>
    <string name="security_type">Type of security</string>
    <string name="password">Password</string>
    <string name="wps_network">Connect via WPS</string>
    <string name="other_network">Other network&#8230;</string>
    <string name="skip_network">Skip</string>
    <string name="wifi_security_type_none">None</string>
    <string name="wifi_security_type_wep">WEP</string>
    <string name="wifi_security_type_wpa">WPA/WPA2 PSK</string>
    <string name="wifi_security_type_eap">802.1x EAP</string>
    <string name="title_wifi_no_networks_available">Scanning&#8230;</string>
    <string name="title_wifi_could_not_save">Couldn\'t save configuration for <xliff:g id="ssid">%1$s</xliff:g></string>
    <string name="title_wifi_could_not_connect">Couldn\'t connect to <xliff:g id="ssid">%1$s</xliff:g></string>
    <string name="title_wifi_could_not_connect_timeout">Couldn\'t find <xliff:g id="ssid">%1$s</xliff:g></string>
    <string name="title_wifi_could_not_connect_authentication_failure">Wi-Fi password not valid</string>
    <string name="title_wifi_could_not_connect_ap_reject">Wi-Fi network didn\'t accept connection</string>
    <string name="title_wifi_advanced_options">Configure <xliff:g id="ssid">%1$s</xliff:g> Proxy and IP Settings?</string>
    <string name="system_setting_wallpaper" >Wallpaper Setting</string>
    <string name="system_select_wallpaper" >Select Wallpaper</string>
    <string name="system_current_wallpaper" >Current wallpaper</string>
    <string name="inputoldpassword">please input the old password:</string>
    <string name="inputnewpassword">please input the new password:</string>
    <string name="reinputnewpassword">please confirm the new password:</string>
    <string name="str_passwd_warning">password only is number</string>
    <string name="confirm">ok</string>
    <string name="cancle">cancle</string>
</resources>