<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@android:color/transparent"  
    >

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="300dp"
        android:background="@drawable/shape_top_corner_no_bottom_line" >

        <TextView
            android:id="@+id/txtPasswordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="53dp"
            android:text="@string/inputoldpassword"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_inputnewpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/txtPasswordInput"
            android:layout_below="@+id/txtPasswordInput"
            android:layout_marginTop="35dp"
            android:text="@string/inputnewpassword"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
		<TextView
            android:id="@+id/textView_reinput_newpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_inputnewpwd"
            android:layout_below="@+id/textView_inputnewpwd"
            android:layout_marginTop="35dp"
            android:text="@string/reinputnewpassword"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_cancle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button_confirm"
            android:layout_alignBottom="@+id/button_confirm"
            android:layout_alignRight="@+id/editText_childlock_oldpwd"
            android:text="@string/cancle"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

   

        <EditText
            android:id="@+id/editText_childlock_renewpwd"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_reinput_newpassword"
            android:layout_alignBottom="@+id/textView_reinput_newpassword"
            android:layout_toRightOf="@+id/textView_reinput_newpassword"
            android:ems="10" 
            android:hint="@string/str_passwd_warning"
            android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen"
            android:inputType="numberPassword"/>

        <EditText
            android:id="@+id/editText_childlock_oldpwd"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/txtPasswordInput"
            android:layout_alignBottom="@+id/txtPasswordInput"
            android:layout_alignLeft="@+id/editText_childlock_newpwd"
            android:ems="10"
            android:hint="@string/str_passwd_warning"
            android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen"
            android:inputType="numberPassword" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editText_childlock_newpwd"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_inputnewpwd"
            android:layout_alignBottom="@+id/textView_inputnewpwd"
            android:layout_alignLeft="@+id/editText_childlock_renewpwd"
            android:ems="10"
            android:hint="@string/str_passwd_warning"
            android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen"
            android:inputType="numberPassword" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_childlock_renewpwd"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:text="@string/confirm"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </RelativeLayout>

</LinearLayout>
