<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="1280dp"
    android:layout_height="720dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_setting_wallpaper"
            android:textSize="30sp"
            android:textColor="#FFFFFFFF"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="960dp"
            android:layout_height="689dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_current_wallpaper"
                android:textSize="20sp"
                android:textColor="#FFFFFFFF"
                android:layout_marginLeft="70dp"/>

            <ImageView
                android:id="@+id/cur_wallpaper"
                android:layout_width="940dp"
                android:layout_height="540dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dip"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="318dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/wallpaper_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/system_select_wallpaper"
            android:textSize="30sp"
            android:textColor="#FFFFFFFF"
            android:layout_marginTop="300dp"
            android:background="#00000000"
            android:layout_marginLeft="30dp"/>

    </LinearLayout>

</LinearLayout>